add_subdirectory(01-setup)
add_subdirectory(02-window)
add_subdirectory(03-instance)
add_subdirectory(04-validation)
add_subdirectory(05-physical)
add_subdirectory(06-logical)
add_subdirectory(07-surface)
add_subdirectory(08-swapchain)
add_subdirectory(09-imageview)
add_subdirectory(10-pipeline)
add_subdirectory(11-shader)
add_subdirectory(12-fixed)
add_subdirectory(13-renderpass)
add_subdirectory(14-fullpipeline)
add_subdirectory(15-framebuffer)
add_subdirectory(16-commandbuffer)
add_subdirectory(17-triangle)
add_subdirectory(18-recreation)
add_subdirectory(19-vertexinput)
add_subdirectory(20-vertexbuffer)
add_subdirectory(21-stagingbuffer)
add_subdirectory(22-indexbuffer)
add_subdirectory(23-descriptorlayout)
add_subdirectory(24-descriptorpool)
